bin/testsuite/tests/compiler/src/compiler4112.swg
#global testerror "Err0686"
#test
{
    #asssert(false) // swc-expected-error {{parser_err_invalid_compiler}}
}